[package]
name = "music-library-comparer"
version = "0.1.0"
categories = ["command-line-interface"]
edition = "2024"
keywords = ["music", "spotify", "qobuz", "tidal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fgimian/music-library-comparer"
description = "Compares TuneMyMusic library exports for TIDAL and Qobuz services."

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
correctness = { level = "warn", priority = 1 }
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
cargo = { level = "warn", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 2 }

[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
csv = "1.3.1"
indexmap = "2.11.0"
serde = { version = "1.0.219", features = ["derive"] }
